scrollbar css fix

--- a/client/src/style/CollectionListStyle/CollectionList.scss
+++ b/client/src/style/CollectionListStyle/CollectionList.scss
@@ -88,6 +88,12 @@
                 border-bottom: 1px solid rgb(231, 231, 231);
                 overflow-x: scroll;
                 scrollbar-width: none;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                
+                &::-webkit-scrollbar{
+                    display: none;
+                }
 
                 .collectionName{
                     display: flex;
