--- a/client/src/style/CreatorListStyle/CreatorList.scss
+++ b/client/src/style/CreatorListStyle/CreatorList.scss
@@ -92,6 +92,12 @@
                 border-bottom: 1px solid rgb(231, 231, 231);
                 overflow-x: scroll;
                 scrollbar-width: none;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                
+                &::-webkit-scrollbar{
+                    display: none;
+                }
 
                 .creatorName{
                     display: flex;
