--- a/client/src/style/SingleDetailStyle/SingleDetail.css
+++ b/client/src/style/SingleDetailStyle/SingleDetail.css
@@ -34,7 +34,7 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: #c5cab7;
+  background-color: #d5ddea;
 }
 
 .SingleDetail .SingleDetailPrimaryInfo {
